@@ -53,3 +53,5 @@ Changes:
 45. Update Conversion class Code Optimization delete unnecessary code.
 46. Update files class, implement folder creation recursively (special thanks => https://github.com/NivaldoMS).
 47. Added shell script file for starting php server , php version and Zest framework version.
+48. Added callback in Router for creating protected page according to specific certia
+   - know issue: its will not work if cache is enable.
